--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
     "require": {
         "pecee/simple-router": "5.0.0.3",
         "firebase/php-jwt": "^6.4",
-      "ext-pdo": "*"
+        "twig/twig": "^3.0",
+      "ext-pdo": "*",
+      "ext-http": "*"
     }
 }
